Fix: mobile nav bottom spacing

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@
 }
 
 section {
+  margin: auto;
+  padding: 1em;
   width: 90%;
   min-height: 10vw;
 }
@@ -45,7 +47,7 @@ header {
 
 nav {
   position: fixed;
-  bottom: 0;
+  bottom: 1em;
   left: 50%;
   transform: translateX(-50%);
 
@@ -356,6 +358,7 @@ p {
     left: auto;
     bottom: auto;
     margin: 0 auto;
+
     padding: 0.5em 1em;
 
     width: fit-content;
